<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoAlumnoActivity">

    <EditText
        android:id="@+id/nuevoAlumnoCuenta"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nuevoAlumnoCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nueoAlumnoNombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nueoAlumnoNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nuevoAlumnoCuenta" />

    <EditText
        android:id="@+id/nueoAlumnoEdad"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nueoAlumnoEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nueoAlumnoNombre"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/nuevaMateriaId"
        android:text="@string/labelForNuevaMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nueoAlumnoEdad" />


    <EditText
        android:id="@+id/nuevaMateriaId"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:hint="@string/nuevaMateriaId"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <EditText
        android:id="@+id/nuevaMateriaCreditos"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:hint="@string/nuevaMateriaCreditos"
        app:layout_constraintBottom_toBottomOf="@+id/nuevaMateriaId"
        app:layout_constraintStart_toEndOf="@+id/nuevaMateriaId"
        app:layout_constraintTop_toTopOf="@+id/nuevaMateriaId"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nuevaMateriaNombre"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:hint="@string/nuevaMateriaNombre"
        app:layout_constraintBottom_toBottomOf="@+id/nuevaMateriaId"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nuevaMateriaCreditos"
        app:layout_constraintTop_toTopOf="@+id/nuevaMateriaId" />



    <Button
        android:id="@+id/addMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMateriaBUtton"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuevaMateriaId" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:labelFor="@id/materias"
        android:text="@string/labelForMaterias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMateria" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/materias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/addAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addAlumno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materias" />


</androidx.constraintlayout.widget.ConstraintLayout>